<resources>
    <string name="app_name">DoAnCuoiKi2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="menu_trangchu">Trang Chủ</string>
    <string name="menu_montoan">Môn Toán</string>
    <string name="menu_monli">Môn Lí</string>
    <string name="menu_monhoa">Môn Hóa</string>
    <string name="menu_tracnghiem">Trắc Nghiệm</string>
    <string name="tracnghiemtoanmuoi">TRẮC NGHIỆM TOÁN 10</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
