<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trangchu"
            android:icon="@drawable/home"
            android:title="@string/menu_trangchu" />
    </group>
    <item android:title="@string/menu_tracnghiem">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_toan"
                    android:icon="@drawable/toan"
                    android:title="@string/menu_montoan" />
                <item
                    android:id="@+id/nav_li"
                    android:icon="@drawable/vatli"
                    android:title="@string/menu_monli" />
                <item
                    android:id="@+id/nav_hoa"
                    android:icon="@drawable/hoa"
                    android:title="@string/menu_monhoa" />
            </group>
        </menu>
    </item>
</menu>
